Use B612 for numbers.

--- a/message-index/index.html
+++ b/message-index/index.html
@@ -7,7 +7,7 @@ title: Home
 <p>
   This site describes the various messages that can be returned by
   GHC, the most-commonly-used Haskell implementation, including both errors and warnings. Beginning with version
-  X.Y.Z, GHC emits a code with the format <code>[GHC-123]</code> for each
+  <code>X.Y.Z</code>, GHC emits a code with the format <code>[GHC-123]</code> for each
   message. These codes can be looked up below for further information.
 </p>
 
